# PP25-Chaotic_Attractor_Compression

./: .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  PUBLICATION_STRATEGY.md  README.md
code/: Cargo.toml  generate_bert_embeddings.py
code/results/: attractor_analysis_2025-11-21.txt  attractor_analysis_verification_2025-11-22.txt  final_experiment_2025-11-21.txt  final_experiment_verification_2025-11-22.txt  results.json  results_all_similarities.json
code/src/: attractor_analysis.rs  datasets.rs  lib.rs  main.rs
code/src/methods/: ans.rs  ans_simple.rs  attractor_compression.rs  delta_lossless.rs  mod.rs
figures/: fig1_lorenz_attractor.eps  fig2_pca_projection.eps  fig3_correlation_dimension.eps  fig4_compression_pipeline.eps  generate_figures.py
paper/: PAPER_CHAOTIC_ATTRACTOR_COMPRESSION.md  paper_arxiv.aux  paper_arxiv.out  paper_arxiv.tex
supplementary/: ADVANCED_METHODS_RESEARCH.md  CHAOTIC_ATTRACTOR_COMPRESSION.md  EXPERIMENTO_FINAL.md  EXPERIMENT_REPORT.md  README.md  REPORTE_FINAL_COMPLETO.md  ROOT_CAUSE_ANALYSIS.md
