[package]
name = "compression-experiment"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Molina <pako.molina@gmail.com>"]

[package.metadata]
experiment_date = "2025-11-21"
author_orcid = "0009-0008-6093-8267"

[dependencies]
flate2 = "1.0"
zstd = "0.13"
lz4 = "1.24"
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
bytemuck = "1.14"
rand = "0.8"
# ANS (Asymmetric Numeral Systems) for entropy coding
constriction = "0.3"  # Modern ANS implementation

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[lib]
name = "compression_experiment"
path = "src/lib.rs"
